--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: page
 <div class="container p-t-20">
 	<div class="row">
 		{% for post in paginator.posts %}
-		<div class="col-md-4 post">
+		<div class="col-md-4 post" style="min-height: 220px;">
 			{% if post.image %}
 				<a href="{{ post.url | prepend: site.baseurl }}" class="inner">
           <div class="img_post">
